[package]
name = "discrim-codegen"
version = "0.0.2"
edition = "2021"

authors = ["Arthur Lafrance <lafranca@uci.edu>"]
description = "Codegen for discrim"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/a-lafrance/discrim"
keywords = ["enum", "codegen", "discriminant", "tag", "derive"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = { version = "1.0.95", features = ["derive", "extra-traits", "parsing"] }

[dev-dependencies]
discrim = { path = "../discrim" }
