[package]
name = "discrim"
version = "0.1.1"
edition = "2021"

authors = ["Arthur Lafrance <lafranca@uci.edu>"]
description = "Construct enum variants from their tag"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/a-lafrance/discrim"
keywords = ["enum", "discriminant", "derive", "codegen"]

[dependencies]
discrim-codegen = { version = "0.1.1", path = "../discrim-codegen" }
